--- a/main.html
+++ b/main.html
@@ -4,10 +4,92 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Movie Gallery</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-1">
+          <img src="https://images.unsplash.com/photo-1679011734667-165e56d79037?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aGklMjBuYW5uYXxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="https://images.unsplash.com/photo-1724423540782-2d3d9a957a30?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmlsbSUyMGNvdmVyfGVufDB8fDB8fHww" alt="Movie" />
+        </div>
+        <div class="col-sm-2">
+          <img src="https://images.unsplash.com/photo-1724423540782-2d3d9a957a30?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmlsbSUyMGNvdmVyfGVufDB8fDB8fHww" alt="Movie" />
+        </div>
+        <div class="col-sm-2">
+          <img src="https://images.unsplash.com/photo-1724423540782-2d3d9a957a30?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmlsbSUyMGNvdmVyfGVufDB8fDB8fHww" alt="Movie" />
+        </div>
+        <div class="col-sm-2">
+          <img src="https://images.unsplash.com/photo-1724423540782-2d3d9a957a30?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmlsbSUyMGNvdmVyfGVufDB8fDB8fHww" alt="Movie" />
+        </div>
+        <div class="col-sm-2">
+          <img src="https://images.unsplash.com/photo-1724423540782-2d3d9a957a30?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmlsbSUyMGNvdmVyfGVufDB8fDB8fHww" alt="Movie" />
+        </div>
+        <div class="col-sm-2">
+          <img src="https://images.unsplash.com/photo-1724423540782-2d3d9a957a30?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmlsbSUyMGNvdmVyfGVufDB8fDB8fHww" alt="Movie" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="https://images.unsplash.com/photo-1535398089889-dd807df1dfaa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fGZpbG0lMjBjb3ZlcnxlbnwwfHwwfHx8MA%3D%3Dhttps://images.unsplash.com/photo-1535398089889-dd807df1dfaa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fGZpbG0lMjBjb3ZlcnxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-4">
+          <img src="https://images.unsplash.com/photo-1535398089889-dd807df1dfaa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fGZpbG0lMjBjb3ZlcnxlbnwwfHwwfHx8MA%3D%3Dhttps://images.unsplash.com/photo-1535398089889-dd807df1dfaa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fGZpbG0lMjBjb3ZlcnxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+        <div class="col-sm-4">
+          <img src="https://images.unsplash.com/photo-1535398089889-dd807df1dfaa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fGZpbG0lMjBjb3ZlcnxlbnwwfHwwfHx8MA%3D%3Dhttps://images.unsplash.com/photo-1535398089889-dd807df1dfaa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzV8fGZpbG0lMjBjb3ZlcnxlbnwwfHwwfHx8MA%3D%3D" alt="Movie" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <img src="https://images.unsplash.com/photo-1632986248848-dc72b1ff4621?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGF2ZW5nZXJ8ZW58MHx8MHx8fDA%3D" alt="Movie" />
+        </div>
+      </div>
+    </div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
